--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,142 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
+
+.container {
+  width: 100%;
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style: none;
+}
+
+.navbar {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.navbar__left h1 {
+  color: rgb(51, 51, 51);
+  font-family: Poppins;
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 39px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.navbar__center ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-left: -200px;
+}
+
+.navbar__center ul li {
+  font-family: poppins;
+  opacity: 0.8;
+  color: rgb(44, 56, 71);
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0%;
+  text-align: left;
+}
+
+.navbar__center ul li:hover {
+  opacity: 1;
+  color: rgb(95, 184, 72);
+  font-family: poppins;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  letter-spacing: 0%;
+  text-align: left;
+  transition: all 0.4s;
+}
+
+.navbar__right {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.btn__nav {
+  border-radius: 27px;
+  background: rgb(73, 73, 73);
+  color: rgb(255, 255, 255);
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0%;
+  text-align: center;
+  border: none;
+  width: 160px;
+  height: 54px;
+}
+
+/* Start hero section */
+
+.hero {
+  display: flex;
+  background-image: url("./assets/hero-bg.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 1200px;
+  height: 700px;
+  background-position: 500px 0px;
+}
+
+.hero__left {
+  margin-top: 50px;
+}
+
+.hero__title {
+  color: rgb(24, 29, 25);
+  font-family: poppins;
+  font-size: 70px;
+  font-weight: 500;
+  line-height: 90px;
+  letter-spacing: 0%;
+  text-align: left;
+  width: 596px;
+  height: 285px;
+}
+
+.spanner {
+  color: rgb(95, 184, 72);
+  font-family: poppins;
+  font-size: 70px;
+  font-weight: 500;
+}
+
+.hero__subtitle {
+  color: rgb(24, 29, 25);
+  font-family: poppins;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 34px;
+  letter-spacing: 0%;
+  text-align: left;
+  width: 504px;
+  height: 102px;
+}
+
+.btn__hero {
+  border-radius: 50px;
+  background: linear-gradient(180deg, rgb(100, 187, 71), rgb(44, 149, 83) 100%);
+  width: 200px;
+  height: 64px;
+  color: rgb(255, 255, 255);
+  font-family: poppins;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: center;
+  border: none;
+  margin-top: 50px;
 }
